kubernetes/infrastructure/ingress/betting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: betting-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  rules:
    - host: betting-esport.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: betting-app-ui
                port:
                  number: 80
